--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.5.0
   flutter_colorpicker: ^1.1.0
+  flutter_riverpod: ^3.0.0
 
 dev_dependencies:
   flutter_test:
